fixed bug: horizontal scrolling in mobile view; added SI table

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@
 }
 
 body, html {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'MyriadPro-Regular', 'Myriad Pro', sans-serif;
   background-color: #f4f4f4;
   /* background-color: #E7DCB1; */
   scroll-behavior: smooth;
@@ -13,7 +14,6 @@ body, html {
 
 * {
   box-sizing: border-box;
-  font-family: 'MyriadPro-Regular', 'Myriad Pro', sans-serif;
 }
 
 section {
@@ -289,7 +289,7 @@ h2 {
     overflow-y: auto;
     width: 70%;
     max-width: 1300px;
-    margin: 0 auto;
+    margin: 0 auto 40px;
     padding: 0 20px;
   }
 
@@ -412,6 +412,7 @@ h2 {
     .content-wrapper {
       width: calc(100% - 20px);
       padding: 0;
+      margin: 0 auto 20px;
     }
 
     .background-chart {
